--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,20 @@ button {
     display: block;
 }
 
+.header-logo .logo-part {
+    color: #2e2f42;
+}
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
 .burger-btn {
     padding: 0;
     border: none;
@@ -138,83 +152,200 @@ button {
         margin-right: 120px;
     }
     
-        .nav-link.current {
-            position: relative;
+    .nav-link.current {
+        position: relative;
+    }
     
-        }
-    
-        .nav-link.current::after {
-            content: '';
-            position: absolute;
-            left: 0;
-            bottom: -1px;
-            border-radius: 2px;
-            width: 100%;
-            height: 4px;
-            background-color: #404bbf;
-        }
+    .nav-link.current::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        border-radius: 2px;
+        width: 100%;
+        height: 4px;
+        background-color: #404bbf;
+    }
 
-.nav-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    padding: 24px 0;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .nav-link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        padding: 24px 0;
+        display: block;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .nav-link:hover,
+    .nav-link:focus,
+    .contacts-link:hover,
+    .contacts-link:focus,
+    .nav-link.current {
+        color: #404bbf;
+    }
+
+    .contacts {
+        font-style: normal;
+        display: block;
+    }
+    .contacts-list {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .contacts-link {
+        display: block;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    }
+
+
+@media screen and (min-width: 1158px) {
+
+    .header-logo {
+        margin-right: 76px;
+    }
+
+    .contacts-list {
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+    }
+    .contacts-link {
+        padding: 24px 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
 }
-
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus,
-.nav-link.current {
-    color: #404bbf;
-}
-
-.contacts {
-    font-style: normal;
-    display: block;
-}
-.contacts-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-
-.contacts-link {
-    display: block;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-}
-
-
-.logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-}
-
- .header-logo .logo-part {
-    color: #2e2f42;
-}
-
- .footer-logo .logo-part {
-    color: #f4f4fd;
-    
- }
-
 
 /* #endregion header */
+
+/* #region mobile-menu */
+
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .mobile-menu.is-open {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
+    .mobile-menu-container {
+        position: relative;
+        padding-top: 72px;
+        padding-bottom: 40px;
+
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .mobile-menu-nav {
+        margin-bottom: auto; 
+    }
+
+    .mobile-menu-nav-list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 40px;
+    }
+
+    .mobile-menu-nav-link {
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+    }
+
+
+    .mobile-menu-contacts-list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 24px;
+    }
+
+    .mobile-menu-nav-link.current {
+        color: #404bbf;
+}
+
+    .mobile-menu-contacts-link {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #434455;
+        font-style: normal;
+    }
+
+    .mobile-menu-contacts-link.current {
+        color: #404bbf;
+        font-style: italic;
+}
+
+    .mobile-menu-contacts {
+        margin-bottom: 48px;
+}
+
+    .mobile-menu-icons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 40px;
+        }
+        
+        .mobile-menu-icons-link {
+            width: 40px;
+            height: 40px;
+            background-color: #4d5ae5;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        
+        .mobile-menu-icons-link:hover,
+        .mobile-menu-icons-link:focus {
+            background-color: #404BBF;
+        }
+        
+        .mobile-menu-icons-soc {
+            fill: #f4f4fd;
+            width: 24px;
+            height: 24px;
+        }
+    
+
+
+    @media screen and (min-width: 768px) {
+        .mobile-menu {
+            display: none;
+        }
+    }
+
+ /* #engregion mobile-menu */
 
 
 /* main */
@@ -586,6 +717,10 @@ flex-basis: calc((100% - 24px) / 2);
 .page-footer {
     background-color: #2e2f42;
     padding: 100px 0;
+}
+
+.footer-logo .logo-part {
+    color: #f4f4fd;
 }
 
 .footer-container {
