--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ button {
         }
     }
 
- /* #engregion mobile-menu */
+/* #endregion mobile-menu */
 
 
 /* main */
@@ -836,21 +836,26 @@ flex-basis: calc((100% - 24px) / 2);
 
 .page-footer {
     background-color: #2e2f42;
-    padding: 100px 0;
-}
-
-.footer-logo .logo-part {
-    color: #f4f4fd;
+    padding: 96px 0;
 }
 
 .footer-container {
-    display: flex;
-    align-items: baseline;
+  
+}
+
+.footer-logo-text {
+    margin: 0 auto;
+    text-align: center;
 }
 
 .footer-logo {
     display: inline-block;
     margin-bottom: 16px;
+}
+
+.footer-logo .logo-part {
+    color: #f4f4fd;
+    
 }
 
 .footer-text {
@@ -859,20 +864,18 @@ flex-basis: calc((100% - 24px) / 2);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    max-width: 264px;
-}
+    max-width: 288px;
+    margin-bottom: 72px;
 
-.footer-logo-text {
-    margin-right: 120px;
 }
 
 .footer-soc-paragraph {
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
+    text-align: center;
     margin-bottom: 16px;
 }
 
@@ -881,12 +884,9 @@ flex-basis: calc((100% - 24px) / 2);
     justify-content: center;
     align-items: center;
     gap: 16px;
-    /* margin-right: 80px; */
+    margin-bottom: 72px;
 }
 
-.footer-icons-link:hover, .footer-icons-link:focus {
-    background-color: #31d0aa;
-}
 
  .footer-icons-link {
     width: 40px;
@@ -899,11 +899,13 @@ flex-basis: calc((100% - 24px) / 2);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
+ .footer-icons-link:hover,
+ .footer-icons-link:focus {
+     background-color: #31d0aa;
+ }
+
 .footer-subscribe {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: auto;
+    align-items: center;
 }
 
 .subscribe-title {
@@ -913,6 +915,7 @@ flex-basis: calc((100% - 24px) / 2);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
+    text-align: center;
 }
 
 .subscribe-form {
@@ -972,6 +975,46 @@ flex-basis: calc((100% - 24px) / 2);
     margin-left: 16px;
     fill: #fff;
 }
+
+
+@media screen and (min-width: 768px) {
+    
+    .page-footer {
+        padding: 96px 164px 96px 108px;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        /* row-gap: 72px; */
+        /* max-width: 496px; */
+
+    }
+
+.footer-text {
+    max-width: 264px;
+}
+
+.footer-logo-text {
+    text-align: left;
+    
+}
+
+.footer-soc-paragraph {
+    text-align: left;
+}
+
+.footer-subscribe {
+    text-align: left;
+}
+
+}
+
+@media screen and (min-width: 1148px) {
+
+}
+
 
  /* #endregion footer */
 
